@@ -2662,6 +2662,7 @@ DRIVER(pb,l5h)          //          08/12   Pin-Bot (L-5, Freeplay / solar value
 DRIVER(pb,j1)           //          11/20   Pin-Bot (PEMBOT (no relation) J-1)
 DRIVER(pb,j2)           //          01/23   Pin-Bot (PEMBOT (no relation) J-2)
 DRIVER(pb,j3)           //          02/23   Pin-Bot (PEMBOT (no relation) J-3)
+DRIVER(pb,j5)           //          01/26   Pin-Bot (PEMBOT (no relation) J-5)
 DRIVER(tts,l1)          //S11-919:  ??/86 W Tic-Tac-Strike (L-1, Shuffle)
 DRIVER(tts,l2)          //          ??/86 W Tic-Tac-Strike (L-2, Shuffle)
 DRIVER(milln,l3)        //S11-555:  01/87 W Millionaire
